# beeswarmer

./: Cargo.toml  README.md  build.rs  flake.nix  grab_strings_for_translation.sh
docs/: manual-en.md
docs/sim/: gen_data.py  sample_en.csv  sample_fr.csv
lang/fr/LC_MESSAGES/: beeswarmer.mo  beeswarmer.po
src/: appdata.rs  config.rs  main.rs  savefile.rs  table.rs
src/callbacks/: configuration.rs  csv.rs  mod.rs  result.rs  setup.rs
src/ml/: beeswarm_draw.rs  beeswarm_prep.rs  mod.rs  model.rs
ui/: app.slint  appstate.slint  tabledata.slint  tabs-widget.slint
ui/tabs/: configuration.slint  csv_editor.slint  results.slint  setup.slint  tab_base.slint
ui/widgets/: grid-textbox.slint  language-selector.slint  multiline-tooltip.slint  n-selector.slint  tabs-widget.slint  throbber.slint  tiny-tickbox.slint  toggle-selector.slint
